--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,9 @@
 
 <body>
   <div id="wrapper">
+    <h1>Welcome to the MongoScraper</h1>
     <div id="articles"></div>
     <div id="notes"></div>
-    <button id="clear-all">Clear All Notes</button>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="app.js"></script>
